// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Button component should render a button with a loading indicator 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`test Button component should render a disabled button with text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  >
    text
  </p>
</button>
`;

exports[`test Button component should render an active button with text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={false}
  type="button"
>
  <p
    className="text undefined"
  >
    text
  </p>
</button>
`;

exports[`test Button component should render an active button without text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={false}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
